unpackaged/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Enterprise__c</fullName>
        <description>External Id created by Rabit</description>
        <externalId>true</externalId>
        <label>Enterprise__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>External Id created by Rabit</description>
        <externalId>true</externalId>
        <label>External_ID__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pro__c</fullName>
        <description>External Id created by Rabit</description>
        <externalId>true</externalId>
        <label>Pro__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TestPro__c</fullName>
        <description>External Id created by Rabit</description>
        <externalId>true</externalId>
        <label>TestPro__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <description>External Id created by Rabit</description>
        <externalId>true</externalId>
        <label>Test__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <description>External Id created by Rabit</description>
        <externalId>true</externalId>
        <label>Version__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>